2. Zwischenstand für die Zuweisung von Startwerten und -argumenten für das Simulations-Setup + Java-Standard für BASE64-Handling eingebaut (von sun.misc... auf org.apache...)
git-svn-id: svn://project.agent-hygrid.net/agentgui/trunk/AgentGUI@591 014e83ad-c670-0410-b1a0-9290c87bb784